<resources>
    <string name="app_name">Mobile Library</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="action_settings">Settings</string>

    <string name="home_name">Heimatadresse </string>
    <string name="home_summary">Die Heimatadresse ist auf %s eingestellt </string>
    <string name="home_key">homeplace</string>
    <string name="home_default"></string>

    <string name="work_name">Arbeitsadresse </string>
    <string name="work_summary">Die Arbeitsadresse ist auf %s eingestellt </string>
    <string name="work_key">workplace</string>
    <string name="work_default"> </string>

    <string name="settingName">anfpreferences</string>

    <string name="useDisplay">Displayzustand</string>
    <string name="useDisplayMessage">Zugriff auf den Displayzustand zur Kontextfeststellung erlauben? Wenn der Zugriff verboten ist wird immer davon ausgegangen,dass das display ausgeschaltet ist und somit immer eine Kontextprüfung durchgeführt.</string>
    <string name="useDisplayKey">Display_key</string>

    <string name="usePosition">Ortsinformationen</string>
    <string name="usePositionMessage">Zugriff auf Ortsinformationen für Nachrichten erlauben? Wenn der Zugriff verboten ist wird immer davon ausgegangen,dass man weder daheim noch auf der Arbeit ist</string>
    <string name="usePositionKey">Ortsinformationen_key</string>

    <string name="useCalendar">Kalenderzugriff</string>
    <string name="useCalendarMessage">Zugriff auf den Kalender erlauben? Wenn der Zugriff verboten ist wird immer davon ausgegangen,dass kein Termin stattfindet</string>
    <string name="useCalendarKey">Kalenderzugriff_key</string>

    <string name="useActivityRecognition">Aktivitätszugriff</string>
    <string name="useActivityRecognitionMessage">Analyse der Tätigkeiten erlauben? Wenn der Zugriff verboten ist wird immer davon ausgegangen,dass das Gerät still liegt</string>
    <string name="useActivityRecognitionKey">Aktivitätszugriff_key</string>

    <string name="shortenConfidential">Vertrauliche Nachrichten kürzen</string>
    <string name="shortenConfidentialMessage">Den Text von Vertraulichen Nachrichten in der Nachrichtenübersicht gegen StandartText austauschen?</string>
    <string name="shortenConfidentialKey">ShortenConfidential_key</string>

    <string name="notificationSettings">Servicespezifische Einstellungen</string>

    <string name="service">Service zulassen</string>
    <string name="service_key">_allowed</string>
    <string name="urgency">Dringlichkeit</string>
    <string name="urgency_key">_urgent</string>
    <string name="urgency_value">URGENT</string>
    <string name="confidential">Vertraulich</string>
    <string name="confidential_key">_confidential</string>
    <string name="confidential_value">CONFIDENTIAL</string>
    <string name="allUrgent">Alle dringlich</string>
    <string name="allUrgent_key">_allUrgent</string>
    <string name="allConfidential">Alle vertraulich</string>
    <string name="allConfidential_key">_allConfidential</string>


    <string name="useService">Nachrichten von diesem Service dürfen empfangen werden</string>
    <string name="allUrgentSummary">Alle Nachrichten des Service als dringend erhalten</string>
    <string name="useUrgency">Nicht dringliche Nachrichten dürfen zugestellt werden</string>
    <string name="useConfidential">Vertrauliche Nachrichten können auf dieses Gerät zugestellt werden</string>
    <string name="allConfidentialSummary">Alle Nachrichten des Service als vertraulich erhalten</string>


    <string name="vibration_name">Vibrationspattern </string>
    <string name="vibration_summary">Das Vibrationspattern ist auf %s eingestellt </string>
    <string name="vibration_key">_vibration</string>





    //Validation Values
    <string name="serviceType">TYPE</string>

    <string name="anfText">MOFTEXT</string>
    <string name="mofMessage">MOFMESSAGE</string>
    <string name="mofShortMessage">MOFSHORTMESSAGE</string>
    <string name="mofTitle">MOFTITLE</string>
    <string name="identifier">IDENTIFIER</string>

    <string name="timeDependency">TIMEDEPENDENCY</string>
    <string name="time">TIME</string>
    <string name="triggerTime">TRIGGERTIME</string>
    <string name="reminderAction">REMINDERACTION</string>

    <string name="positionDependency">POSITIONDEPENDENCY</string>
    <string name="navigation">NAVIGATION</string>
    <string name="positionTrigger">POSITIONTRIGGER</string>
    <string name="meter">METER</string>
    <string name="duration">DURATION</string>
    <string name="positions">POSITIONS</string>
    <string name="position">POSITION</string>
    <string name="placeName">PLACENAME</string>
    <string name="place">PLACE</string>
    <string name="latitude">LATIDUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="street">STREET</string>
    <string name="postal">POSTAL</string>

    <string name="actions">ACTIONS</string>
    <string name="voiceAnswer">VOICEANSWER</string>
    <string name="quickAnswer">QUICKANSWER</string>
    <string name="answerValues">ANSWERVALUES</string>
    <string name="callName">NAME</string>
    <string name="callNumber">NUMBER</string>

    <string name="financialInformations">FINANCIALINFORMATIONS</string>
    <string name="accountActions">ACCOUNTACTION</string>
    <string name="accountBalance">ACCOUNTBALANCE</string>
    <string name="subject">SUBJECT</string>
    <string name="from">FROM</string>
    <string name="iban">IBAN</string>
    <string name="fromName">FROMNAME</string>
    <string name="bic">BIC</string>
    <string name="paymentInformation">PAYMENTINFORMATION</string>
    <string name="currency">CURRENCY</string>
    <string name="payPal">PAYPAL</string>
    <string name="cash">CASH</string>
    <string name="ecCARD">ECCARD</string>
    <string name="visa">VISA</string>



</resources>
